Ejemplos/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-hello-pod
  labels:
    app: api-hello
spec:
  containers:
  - name: api-hello
    image: docker.io/oscarllamas6/hello-golang:latest
    ports:
    - containerPort: 8080
