Ejemplos/k8s/nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: api-hello
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
