Ejemplos/k8s/persistentvolume.yml

apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
  labels:
    name: test-app
spec:
  volumes:
    - name:  task-pv-storage
      persistentVolumeClaim:
        claimName: claim-1
  containers:
  - name: task-pv-container
    image: nginx
    ports:
      - containerPort: 80
        name: "http-server"
    volumeMounts:
      - name:  task-pv-storage
        mountPath:  "/usr/share/nginx/html"
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: test-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
