Ejemplos/k8s/volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-app
  labels:
    app: test-app
spec:
  containers:
    - image: nginx
      name: test-container
      volumeMounts:
      - name:  host-volume
        mountPath: "/usr/share/nginx/html"
  
  volumes:
    # - name:  empty-volume
    #   emptyDir: { }

    # - name: nfs-volume
    #   nfs:
    #     server: 10.108.211.244
    #     path: /

    - name: host-volume
      hostPath:
        path: /home/docker/html
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: test-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
