Ejemplos/k8s/ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  tls:
    - hosts: 
      - myapp.com
      secretName: myapp-secret-tls
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/nginx"
          backend:
            service:
              name: nginx-service
              port: 
                number: 80
        - pathType: Prefix
          path: "/apache"
          backend:
            service:
              name: apache-service
              port: 
                number: 80
