Ejemplos/k8s/ingress.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pd1
  labels:
    name: test-nginx
spec:
  containers:
  - name: test-container1
    image: nginx

---

apiVersion: v1
kind: Pod
metadata:
  name: test-pd2
  labels:
    name: test-apache
spec:
  containers:
  - name: test-container2
    image: httpd

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: test-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  type: NodePort
  selector:
    app: test-apache
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/nginx"
          backend:
            service:
              name: nginx-service
              port: 
                number: 80
        - pathType: Prefix
          path: "/apache"
          backend:
            service:
              name: apache-service
              port: 
                number: 80
